--- a/1.0.0/web/Public/Content/Site.css
+++ b/1.0.0/web/Public/Content/Site.css
@@ -166,7 +166,7 @@ p {
 }
 
 .PSI-Copyright {
-  background-color: #354a5f !important;
+  background-color: #3975d5 !important;
 }
 
 .PSI-Copyright .x-panel-header-text-container-default {
@@ -175,7 +175,7 @@ p {
 
 .PSI-App {
   background-image: none;
-  background-color: #354a5f !important;
+  background-color: #3975d5 !important;
 }
 
 .PSI-App .x-btn-default-toolbar-small .x-btn-inner {
@@ -184,7 +184,7 @@ p {
 
 .PSI-App-MainMenu {
   background-image: none;
-  background-color: #354a5f !important;
+  background-color: #3975d5 !important;
   border: 0;
 }
 
@@ -202,11 +202,19 @@ p {
 .PSI-App .x-btn-default-toolbar-small-pressed,
 .PSI-App .x-btn-default-toolbar-small-over {
   background-image: none;
-  background-color: #963838;
+  background-color: #2963c0;
   border: 0;
-  height: 30px;
+  height: 22px;
 }
-
+.PSI-App .x-btn-default-toolbar-small-menu-active:hover,
+.PSI-App .x-btn-default-toolbar-small-pressed:hover,
+.PSI-App .x-btn-default-toolbar-small-over:hover {
+  background-image: none;
+  background-color: #2963c0;
+  border: 0;
+  height: 22px;
+}
+.x-btn-default-toolbar-small-focus{  background: #2963c0;}
 .PSI-App .x-btn-default-toolbar-small .x-btn-arrow {
   background-image: none;
 }
@@ -370,7 +378,7 @@ p {
 
 .x-panel-header-text-container-default {
   font-weight: normal;
-  color: #196d6d;
+  color: #333;
 }
 
 .x-btn-default-toolbar-small .x-btn-inner {
@@ -395,12 +403,12 @@ p {
 }
 
 .x-column-header-text {
-  color: #196d6d;
+  color: #666;
 }
 
 .x-form-item-label {
   font-size: 13px;
-  color: #196d6d;
+  color: #666;
   /* font-family: "Monospaced Number", "Chinese Quote", -apple-system,
 		BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC",
 		"Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica,
@@ -777,4 +785,26 @@ input:focus{
 .PSI-record-disabled {
   color: gray;
   text-decoration: line-through;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+
+background-color:#999 !important;
+
+}
+
+::selection {
+    background-color: #a4d8fb !important;
+    color: #000 !important;
+}
+
+.x-mask-msg-inner {
+    padding: 5px 10px;
+    /* border-style: solid; */
+    /* border-width: 1px; */
+    border: none;
+    background-color: #ffffff;
+    color: #222222;
+    
 }
