git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@13 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/User/index.html
+++ b/1.0.0/web/Application/Home/View/User/index.html
@@ -7,7 +7,7 @@
 
 <script src="{$uri}Public/Scripts/PSI/User/ParentOrgEditor.js?dt={$dtFlag}" type="text/javascript"></script>
 <script src="{$uri}Public/Scripts/PSI/User/OrgEditor.js?dt={$dtFlag}" type="text/javascript"></script>
-
+<script src="{$uri}Public/Scripts/PSI/User/RoleEditor.js?dt={$dtFlag}" type="text/javascript"></script>
 <script src="{$uri}Public/Scripts/PSI/User/MainForm.js?dt={$dtFlag}" type="text/javascript"></script>
 <script src="{$uri}Public/Scripts/PSI/User/OrgEditForm.js?dt={$dtFlag}" type="text/javascript"></script>
 <script src="{$uri}Public/Scripts/PSI/User/UserEditForm.js?dt={$dtFlag}" type="text/javascript"></script>
