--- a/1.0.0/web/Application/Home/View/User/login.html
+++ b/1.0.0/web/Application/Home/View/User/login.html
@@ -54,7 +54,7 @@
   }
 
   input:focus {
-    border-color: transparent transparent #9254de transparent !important;
+    border-color: transparent transparent #3975d5 transparent !important;
     border-width: 2px !important;
   }
 
@@ -62,10 +62,7 @@
     color: #ddd0d0 !important;
   }
 
-  ::selection {
-    background-color: #006d75;
-    color: white;
-  }
+
 </style>
 
 <div id="loading-mask"></div>
@@ -85,77 +82,37 @@
 <link href="{$uri}Public/Content/foundation/foundation.min.css" rel="stylesheet" type="text/css" />
 <link href="{$uri}Public/Content/foundation/app.css" rel="stylesheet" type="text/css" />
 
-<div class="top-bar">
-  <div class="top-bar-left">
-    <ul class="menu">
-      <li class="menu-text"><span style="font-size: 1.5em;color:#c7c6c6">{$productionNameFull}</span></li>
-    </ul>
-  </div>
-  <div class="top-bar-right">
-    <ul class="menu">
-      <li><a href="{$uri}Home/Help/index?t=login" target="_blank"><span
-            style="font-size: 1em;color:#c7c6c6">实施指南</span></a></li>
-    </ul>
-  </div>
-</div>
-
-<div class="psi_content">
-  <div class="row">
-    <div class="large-8 columns">
-      <h3 style="margin-top: 60px;color:#196d6d;border-left:6px solid #e6e6e6;padding-left: 10px;">
-        管理就是界定企业的使命，并激励和组织人力资源去实现这个使命。界定使命是企业家的任务，而激励与组织人力资源是领导力的范畴，二者的结合就是管理。
-      </h3>
-      <div style="text-align: right;margin-right: 30px;color:#196d6d;">彼得·德鲁克</div>
-    </div>
-
-    <div class="large-4 columns">
-      <div style="margin: 50px 0 0 0">
-        <form>
-          <div class="row" style="margin-top:70px;">
-            <div class="small-1 columns">
+<div class="container">
+    <div id="wrapper" class="login-body">
+        <div class="login-content">
+            <div class="brand">
+                <!-- <img alt="logo" class="brand-img" src="assets/store/img/login/logo.png"> -->
+                <h2 class="brand-text">{$productionName}</h2>
             </div>
-            <div class="small-11 columns">
-              <input type="text" id="editLoginName" placeholder="登录名">
-            </div>
-          </div>
-          <div class="row">
-            <div class="small-1 columns">
-            </div>
-            <div class="small-11 columns">
-              <input type="password" id="editPassword" placeholder="密码">
-            </div>
-          </div>
-          <div class="row">
-            <div class="small-1 columns">&nbsp;</div>
-            <div class="small-6 columns">
-              <a href="#" class="button expanded psi_secondary" id="buttonOK">登&nbsp;&nbsp;录</a>
-            </div>
-            <div class="small-5 columns">&nbsp;</div>
-          </div>
-        </form>
-      </div>
-
-      <div id="divInfoCallout" style="display: none" data-closable>
-        <div style="border-left: 6px solid #fa8c16;padding: 10px 10px 10px 20px;background-color: #fff1f0;color:#fa541c"
-          id="divInfo">
+            <form id="login-form" class="login-form">
+                <div class="form-group">
+				    <input type="text" id="editLoginName" placeholder="登录名">
+                    <!-- <input class="" name="User[user_name]" placeholder="请输入用户名" type="text" required=""> -->
+                </div>
+                <div class="form-group">
+				 <input type="password" id="editPassword" placeholder="密码">
+                    <!-- <input class="" name="User[password]" placeholder="请输入密码" type="password" required=""> -->
+                </div>
+                <div class="form-group">
+                    <!-- <button id="btn-submit" type="submit"> -->
+                        <!-- 登录 -->
+                    <!-- </button> -->
+					<a href="#" class="button expanded psi_secondary" id="buttonOK">登&nbsp;&nbsp;录</a>
+                </div>
+            </form>
         </div>
-      </div>
-      <div style="height: 10px;"></div>
-      <div style="border-left: 6px solid #1890ff;padding: 10px 10px 10px 20px;background-color: #e6f7ff;color:#196d6d"
-        id="divDemoWarning">{$demoInfo}</div>
+		<div class="copyright">
+        <span>Copyright &copy; 2015-{$year} <br> 广州飞步信息科技有限公司, All Rights Reserved</span>
     </div>
-  </div>
+    </div>
+    
 </div>
-<footer>
-  <div class="row">
-    <div class="large-3 columns">&nbsp;</div>
-    <div class="large-6 columns">
-      <span style="font-size: 0.8em;color:#a7a7a7">Copyright &copy; 2015-{$year}
-        广州飞步信息科技有限公司, All Rights Reserved</span>
-    </div>
-    <div class="large-3 columns">&nbsp;</div>
-  </div>
-</footer>
+
 
 <style>
   .psi_content {
@@ -166,15 +123,124 @@
   .footer {
     height: 50px;
   }
+  body,html{
+  height:100%}
+  body{background:url({$uri}Public/Images/login-bg.jpg) no-repeat center/cover !important;overflow:hidden}
+.login-body {
+    
+    vertical-align: middle;
+    width: 400px;
+	height:100%;
+    margin: 10% auto;
+    background: #fff;
+    border-radius: 4px;
+    padding: 50px 40px 40px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+	box-shadow: 0 5px 20px #999;
+}
+.copyright{text-align:center;color:#666;font-size:12px}
+.login-content {
+}
+
+.login-content .brand .brand-img {
+    width: 100px;
+	display:block;
+	margin:0 auto;
+}
+
+.login-content .brand .brand-text {
+    margin-top: 10px;
+    margin-bottom: 11px;
+    font-size: 20px !important;
+    font-family: "Microsoft YaHei";
+    text-shadow: rgba(0, 0, 0, .15) 0 0 1px;
+    font-weight: 400;
+    color: #37474f;
+	text-align:center;
+}
+.psi_secondary{background:#3975d5;color:#fff}
+.psi_secondary:hover{background:#3975d5;opacity:0.9}
+.login-form {
+    margin: 45px 0 30px;
+}
+
+.login-form .form-group {
+    margin: 30px 0;
+}
+
+.login-form input {
+    display: block;
+    border: 0;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    width: 100%;
+    border-bottom: 1px solid #E4EAEC;
+    font-size: 14px;
+    height: 42px;
+    line-height: 1.5;
+    outline: none;
+    padding: 0 5px;
+    color: #a3afb7;
+    font: 14px/1.5 "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", Roboto, Arial, sans-serif;
+    transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
+
+.login-form input:focus {
+    border-bottom: 1px solid #ff5060;
+}
+
+.login-form button {
+    width: 100%;
+    margin-top: 20px;
+    padding: 10px 18px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 4px;
+    white-space: normal;
+    -webkit-transition: border .2s linear, color .2s linear, width .2s linear, background-color .2s linear;
+    -o-transition: border .2s linear, color .2s linear, width .2s linear, background-color .2s linear;
+    transition: border .2s linear, color .2s linear, width .2s linear, background-color .2s linear;
+    -webkit-font-smoothing: subpixel-antialiased;
+    color: #fff;
+    background-color: #ff5060;
+    /*border-color: #ff5060;*/
+    border: 1px solid transparent;
+    cursor: pointer;
+    outline: none;
+}
+
+.login-form button[disabled], .login-form button[disabled]:hover {
+    color: #fff;
+    background-color: #a2caee;
+    border-color: #a2caee;
+    cursor: not-allowed;
+    opacity: .65;
+}
+
+.login-form button:hover {
+    background-color: #fd717e;
+    border-color: #fd717e;
+}
+
+@media screen and (max-width: 404px) {
+    .login-body {
+        width: 310px;
+        padding: 50px 30px 40px;
+    }
+}
 </style>
 
 <script type="text/javascript">
   PCL.onReady(() => {
     PSI.Const.BASE_URL = "{$uri}";
 
-    if ("{$demoInfo}" == "") {
-      PCL.get("divDemoWarning").remove();
-    }
+   
 
     var editLoginName = document.getElementById("editLoginName");
     var editPassword = document.getElementById("editPassword");
