--- a/1.0.0/web/Application/Home/View/layout.html
+++ b/1.0.0/web/Application/Home/View/layout.html
@@ -18,6 +18,7 @@
   <script src="{$uri}Public/PCL/ext-lang-zh_CN.js" type="text/javascript"></script>
   <script src="{$uri}Public/Scripts/PSI/MsgBox.js?dt={$dtFlag}" type="text/javascript"></script>
   <script src="{$uri}Public/Scripts/PSI/Const.js?dt={$dtFlag}" type="text/javascript"></script>
+  <script src="{$uri}Public/Scripts/PSI/Common.js?dt={$dtFlag}" type="text/javascript"></script>
 
   <link href="{$uri}Public/PCL/resources/pcl.css" rel="stylesheet" type="text/css" />
   <link href="{$uri}Public/Content/Site.css?dt={$dtFlag}" rel="stylesheet" type="text/css" />
