git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@27 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/Customer/index.html
+++ b/1.0.0/web/Application/Home/View/Customer/index.html
@@ -30,7 +30,8 @@
       pAddCustomer: "{$pAddCustomer}",
       pEditCustomer: "{$pEditCustomer}",
       pDeleteCustomer: "{$pDeleteCustomer}",
-      pImportCustomer: "{$pImportCustomer}"
+      pImportCustomer: "{$pImportCustomer}",
+      pMergeCustomer: "{$pMergeCustomer}"
     }));
   });
 </script>
