git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@30 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Public/Content/Site.css
+++ b/1.0.0/web/Public/Content/Site.css
@@ -214,7 +214,7 @@ p {
   border: 0;
   height: 22px;
 }
-.x-btn-default-toolbar-small-focus{  background: #2963c0;}
+.x-btn-default-toolbar-small-focus{  background: none;}
 .PSI-App .x-btn-default-toolbar-small .x-btn-arrow {
   background-image: none;
 }
@@ -293,9 +293,9 @@ p {
 }
 
 .x-btn-default-small-over {
-  background-image: none;
+  /*background-image: none;
   border-color: #f759ab;
-  background-color: #ffadd2;
+  background-color: #ffadd2;*/
 }
 
 .x-btn-default-small {
@@ -807,4 +807,8 @@ background-color:#999 !important;
     background-color: #ffffff;
     color: #222222;
     
+}
+.fb-bg{
+	
+	background:#99bce8 !important;
 }
