git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@33 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Public/Content/icons.css
+++ b/1.0.0/web/Public/Content/icons.css
@@ -455,7 +455,7 @@
 }
 
 .PSI-button-hide {
-    background-image:url(../Images/icons/hide.png?v=2018041801) !important;
+    /* background-image:url(../Images/icons/hide.png?v=2018041801) !important; */
 }
 
 .PSI-button-print {
