git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@39 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/User/login.html
+++ b/1.0.0/web/Application/Home/View/User/login.html
@@ -104,6 +104,11 @@
                     <!-- </button> -->
 					<a href="#" class="button expanded psi_secondary" id="buttonOK">登&nbsp;&nbsp;录</a>
                 </div>
+                <div id="divInfoCallout" style="display: none" data-closable>
+                    <div style="border-left: 6px solid #fa8c16;padding: 10px 10px 10px 20px;background-color: #fff1f0;color:#fa541c"
+                         id="divInfo">
+                    </div>
+                </div>
             </form>
         </div>
 		<div class="copyright">
