--- a/1.0.0/web/Public/Content/Site.css
+++ b/1.0.0/web/Public/Content/Site.css
@@ -194,8 +194,8 @@ p {
 
 .PSI-App-MainMenu .x-menu-item-active {
   background-image: none;
-  background-color: #963838;
-  border-color: #963838;
+  background-color: #cdddf9;
+  border-color: #cdddf9;
 }
 
 .PSI-App .x-btn-default-toolbar-small-menu-active,
@@ -810,5 +810,19 @@ background-color:#999 !important;
 }
 .fb-bg{
 	
-	background:#99bce8 !important;
+	background:#fff !important;
 }
+.fb-bg.PSI-App-MainMenu .x-menu-item-text{color:#333 !important;}
+
+.x-menu-item-link{line-height:30px;}
+.x-menu-item-icon{top:9px;}
+
+.x-grid-record-gray .x-grid-td{ background: #948d8e; }
+
+.x-grid-record-red .x-grid-td{ background: red; }
+
+.x-grid-record-yellow .x-grid-td{ background: blue; }
+
+.x-grid-record-green .x-grid-td{ background: #12dc12; }
+
+.x-grid-record-orange .x-grid-td{ background: orange; }
