--- a/1.0.0/web/Application/Home/View/Inventory/initIndex.html
+++ b/1.0.0/web/Application/Home/View/Inventory/initIndex.html
@@ -7,6 +7,7 @@
 
 <script src="{$uri}Public/Scripts/PSI/Inventory/InitInventoryMainForm.js?dt={$dtFlag}" type="text/javascript"></script>
 <script src="{$uri}Public/Scripts/PSI/Inventory/InitInventoryEditForm.js?dt={$dtFlag}" type="text/javascript"></script>
+<script src="{$uri}Public/Scripts/PSI/Inventory/InitInventoryImportForm.js?dt={$dtFlag}" type="text/javascript"></script>
 
 <script>
   PCL.onReady(() => {
