git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@52 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/Goods/index.html
+++ b/1.0.0/web/Application/Home/View/Goods/index.html
@@ -41,7 +41,9 @@
       pEditBOM: "{$pEditBOM}",
       pDeleteBOM: "{$pDeleteBOM}",
       pPriceSystem: "{$pPriceSystem}",
-      pExcel: "{$pExcel}"
+      pExcel: "{$pExcel}",
+      pViewSalePrice: "{$pViewSalePrice}",
+      pViewPurchasePrice: "{$pViewPurchasePrice}",
     }));
   });
 </script>
