--- a/1.0.0/web/Public/Content/Site.css
+++ b/1.0.0/web/Public/Content/Site.css
@@ -827,3 +827,37 @@ background-color:#999 !important;
 .x-grid-record-green .x-grid-td{ background: #12dc12; }
 
 .x-grid-record-orange .x-grid-td{ background: orange; }
+
+.home-content{width:100%;height:100%;overflow-y:auto;background:#ebeff6;}
+.home-content-p{padding:20px;max-width:1400px;margin:20px auto;}
+.home-nav-t{font-size:20px;}
+.home-nav ul{padding:10px;}
+
+.home-nav ul li{width:23%;margin:0 1% 5px 1%;height:100px;display:inline-block;text-align:Center;background:#fff;line-height:100px;font-size:18px;border-radius:5px;vertical-align:middle;cursor:pointer;transition:all 0.2s;}
+.home-nav ul li i{margin-right:5px;font-size:40px;color:#3975d5;line-height:100px;display:inline-block;vertical-align:middle}
+.home-nav ul li:hover{background:#3975d5;color:#fff}
+.home-nav ul li:hover i{color:#fff}
+.PSI-portal-sale {
+ 
+    background-size: 100% 100%;
+}
+#PSI_User_ChangeMyPasswordForm_editForm{left:50% !important;margin-left:-300px}
+.PSI-field-note2 {
+  color: #999;
+  border-bottom: none;
+}
+.x-window{padding:10px;}
+.x-window-header-text-container-default {text-align:center;border:none}
+.x-window-header-text-container-default span{color:#3975d5}
+.x-window-item h2{border-left:none !important;color:#666 !important;font-size:16px !important;font-weight:500 !important }
+.x-window-default,.x-window-header-default-top{border:none}
+#PSI_AFX_MessageBox_ConfirmForm_buttonCancel{border:1px solid #999 !important;color:#999 !important}
+#PSI_AFX_MessageBox_ConfirmForm_buttonCancel-btnInnerEl{color:#999 !important}
+span.PSI-button-ok{background-image:none !important}
+
+
+@media (max-width: 750px) {
+	.home-nav ul li{width:100%;margin:0 0 5px 0;}
+	
+}
+
