--- a/1.0.0/web/Application/Home/View/Index/index.html
+++ b/1.0.0/web/Application/Home/View/Index/index.html
@@ -4,29 +4,32 @@
 * @license GPL v3
 */}
 <layout name="layout" />
-
-<script src="{$uri}Public/Scripts/PSI/Home/MainForm.js?dt={$dtFlag}" type="text/javascript"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
+ <script src="{$uri}Public/Scripts/PSI/Home/MainForm.js?dt={$dtFlag}" type="text/javascript"></script>  
 <script>
   PCL.onReady(() => {
+    <!-- const mainForm = PCL.create("PSI.Home.MainForm", { -->
+     <!-- loginUserId: "{$loginUserId}", -->
+      <!-- loginUserName: "{$loginName}", -->
+      <!-- loginUserFullName: "{$loginUserName}" -->
+    <!-- }); -->
     const app = PCL.create("PSI.App", {
       userName: "{$loginUserName}",
       productionName: "{$productionName}",
       showCopyright: true,
       //showRecent: true,
+	  showContent:true,
       appHeaderInfo: {
         title: "{$title}"
       }
     });
+      
+	  
+	  
 
-    app.add(PCL.create("PSI.Home.MainForm", {
-      pSale: "{$pSale}",
-      pInventory: "{$pInventory}",
-      pPurchase: "{$pPurchase}",
-      pMoney: "{$pMoney}",
-      productionName: "{$productionName}",
-      pSaleBrief: "{$pSaleBrief}",
-      pSaleCntBrief: "{$pSaleCntBrief}",
-      pSaleTop: "{$pSaleTop}"
-    }));
+   
+    
+
   });
 </script>
+
