git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@56 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/layout.html
+++ b/1.0.0/web/Application/Home/View/layout.html
@@ -40,6 +40,7 @@
   <script src="{$uri}Public/Scripts/PSI/AFX/Form/EditForm.js?dt={$dtFlag}" type="text/javascript"></script>
   <script src="{$uri}Public/Scripts/PSI/AFX/MessageBox/ShowInfoForm.js?dt={$dtFlag}" type="text/javascript"></script>
   <script src="{$uri}Public/Scripts/PSI/AFX/MessageBox/ConfirmForm.js?dt={$dtFlag}" type="text/javascript"></script>
+  <script src="{$uri}Public/Scripts/PSI/AFX/MessageBox/ConfirmContentForm.js?dt={$dtFlag}" type="text/javascript"></script>
 
   <link href="{$uri}Public/Content/iconfont.css?dt={$dtFlag}" rel="stylesheet" type="text/css" />
   
