git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@60 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/Report/overview.html
+++ b/1.0.0/web/Application/Home/View/Report/overview.html
@@ -12,7 +12,7 @@
       userName: "{$loginUserName}",
       productionName: "{$productionName}",
       showCopyright: true,
-      showRecent: true,
+      showRecent: false,
       appHeaderInfo: {
         title: "{$title}"
       }
