--- a/1.0.0/web/Application/Home/View/Sale/genWSBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/Sale/genWSBillPrintPage.html
@@ -25,6 +25,14 @@
       <td colspan="3"><span style='font-size: 13'>{$data["warehouseName"]}</span></td>
     </tr>
     <tr>
+      <td><span style='font-size: 13'>销售金额</span></td>
+      <td><span style='font-size: 13'>{$data["saleMoney"]}</span></td>
+      <td><span style='font-size: 13'>运费</span></td>
+      <td><span style='font-size: 13'>{$data["freight"]}</span></td>
+      <td><span style='font-size: 13'>合计</span></td>
+      <td><span style='font-size: 13'>{$data["totalMoney"]}</span></td>
+    </tr>
+    <tr>
       <td><span style='font-size: 13'>交货地址</span></td>
       <td colspan="5"><span style='font-size: 13'>{$data["dealAddress"]}</span></td>
     </tr>
@@ -60,12 +68,12 @@
       <td>
         <div align="center" style='font-size: 13'>销售金额</div>
       </td>
-      <td>
+      <!--<td>
         <div align="center" style='font-size: 13'>税率</div>
       </td>
       <td>
         <div align="center" style='font-size: 13'>价税合计</div>
-      </td>
+      </td>-->
     </tr>
     <foreach name="data['items']" item="v" key="i">
       <tr>
@@ -93,12 +101,13 @@
         <td>
           <div align="right" style='font-size: 13'>{$v["goodsMoney"]}</div>
         </td>
-        <td>
+        <!--<td>
           <div align="right" style='font-size: 13'>{$v["taxRate"]}%</div>
         </td>
         <td>
           <div align="right" style='font-size: 13'>{$v["moneyWithTax"]}</div>
         </td>
+        -->
       </tr>
     </foreach>
     <tr>
@@ -114,11 +123,11 @@
       <td>
         <div align="right">￥{$data["saleMoney"]}</div>
       </td>
-      <td>
+      <!--<td>
       </td>
       <td>
         <div align="right">￥{$data["moneyWithTax"]}</div>
-      </td>
+      </td>-->
     </tr>
   </table>
 </body>
