--- a/1.0.0/web/Public/Content/Site.css
+++ b/1.0.0/web/Public/Content/Site.css
@@ -8,7 +8,9 @@ p {
     "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica,
     Arial, sans-serif;
 }
-
+html{
+	background:#ebeff6
+}
 .PSI-About-body {
   background-color: white !important;
 }
@@ -18,7 +20,7 @@ p {
 }
 
 .PSI-Bizconfig .x-panel-body-default {
-  border-color: white;
+  border-color:white;
 }
 
 .PSI-about p {
@@ -228,7 +230,7 @@ p {
 }
 
 .x-border-layout-ct {
-  background-color: white;
+  background-color: #ebeff6;
 }
 
 .x-window-default {
@@ -830,10 +832,20 @@ background-color:#999 !important;
 
 .home-content{width:100%;height:100%;overflow-y:auto;background:#ebeff6;}
 .home-content-p{padding:20px;max-width:1400px;margin:20px auto;}
-.home-nav-t{font-size:20px;}
+.home-nav-t{font-size:20px;padding:10px;}
+.home-nav{background: #fff;
+    border-radius: 10px;
+    padding: 10px;margin-bottom:20px;
+	border-left: 5px solid #4576ce;
+	}
+
+
 .home-nav ul{padding:10px;}
 
-.home-nav ul li{width:23%;margin:0 1% 5px 1%;height:100px;display:inline-block;text-align:Center;background:#fff;line-height:100px;font-size:18px;border-radius:5px;vertical-align:middle;cursor:pointer;transition:all 0.2s;}
+
+
+
+.home-nav ul li{width:23%;margin:0 0.8% 5px 0.8%;height:100px;display:inline-block;text-align:Center;background:#fff;line-height:100px;font-size:18px;border-radius:5px;vertical-align:middle;cursor:pointer;transition:all 0.2s;border:1px solid #d2e2ff}
 .home-nav ul li i{margin-right:5px;font-size:40px;color:#3975d5;line-height:100px;display:inline-block;vertical-align:middle}
 .home-nav ul li:hover{background:#3975d5;color:#fff}
 .home-nav ul li:hover i{color:#fff}
@@ -854,6 +866,209 @@ background-color:#999 !important;
 #PSI_AFX_MessageBox_ConfirmForm_buttonCancel{border:1px solid #999 !important;color:#999 !important}
 #PSI_AFX_MessageBox_ConfirmForm_buttonCancel-btnInnerEl{color:#999 !important}
 span.PSI-button-ok{background-image:none !important}
+
+
+
+.loader {
+  position: relative;
+  width: 75px;
+  height: 100px;
+ 
+ 
+  }
+  .loader-b{
+	  position:fixed;
+	   top:50%;
+  margin-top:-75px;
+  left:50%;
+  margin-left:-75px;
+   background:#3975d5;
+   padding:0 37.5px 50px 37.5px;
+   border-radius:50%;
+	  
+  }
+  .loader__bar {
+    position:absolute;
+    bottom: 0;
+    width: 10px;
+    height: 50%;
+    background:  #fff;
+    transform-origin: center bottom;
+    box-shadow: 1px 1px 0 rgba(0,0,0,.2);
+    }
+   
+    .loader__bar:nth-child(1){
+		 left: 0;
+         transform: scale(1,0.2);
+         animation: barUp1 4s infinite;
+	}
+ .loader__bar:nth-child(2){
+		 left: 15px;
+         transform: scale(1,0.4);
+         animation: barUp2 4s infinite;
+	}
+	.loader__bar:nth-child(3){
+		 left: 30px;
+         transform: scale(1,0.6);
+         animation: barUp3 4s infinite;
+	}.loader__bar:nth-child(4){
+		 left: 45px;
+         transform: scale(1,0.8);
+         animation: barUp4 4s infinite;
+	}.loader__bar:nth-child(5){
+		 left: 60px;
+         transform: scale(1,1);
+         animation: barUp5 4s infinite;
+	}
+  
+  .loader__ball {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 10px;
+    height: 10px;
+    background:  #fff;
+    border-radius: 50%;
+    animation: ball 4s infinite;
+  }
+
+
+@keyframes ball {
+  0% {
+    transform: translate(0, 0);
+  }
+  5% {
+    transform: translate(8px, -14px);
+  }
+  10% {
+    transform: translate(15px, -10px)
+  }
+  17% {
+    transform: translate(23px, -24px)
+  }
+  20% {
+    transform: translate(30px, -20px)
+  }
+  27% {
+    transform: translate(38px, -34px)
+  }
+  30% {
+    transform: translate(45px, -30px)
+  }
+  37% {
+    transform: translate(53px, -44px)
+  }
+  40% {
+    transform: translate(60px, -40px)
+  }
+  50% {
+    transform: translate(60px, 0)
+  }
+  57% {
+    transform: translate(53px, -14px)
+  }
+  60% {
+    transform: translate(45px, -10px)
+  }
+  67% {
+    transform: translate(37px, -24px)
+  }
+  70% {
+    transform: translate(30px, -20px)
+  }
+  77% {
+    transform: translate(22px, -34px)
+  }
+  80% {
+    transform: translate(15px, -30px)
+  }
+  87% {
+    transform: translate(7px, -44px)
+  }
+  90% {
+    transform: translate(0, -40px)
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes barUp1 { 
+  0% {
+    transform: scale(1, .2);
+  }
+  40%{
+    transform: scale(1, .2);
+  }
+  50% {
+    transform: scale(1, 1);
+  }
+  90% {
+    transform: scale(1,1);
+  }
+  100% {
+    transform: scale(1,.2);
+  }
+}
+@keyframes barUp2 { 
+  0% {
+    transform: scale(1, .4);
+  }
+  40% {
+    transform: scale(1, .4);
+  }
+  50% {
+    transform: scale(1, .8);
+  }
+  90% {
+    transform: scale(1, .8);
+  }
+  100% {
+    transform: scale(1, .4);
+  }
+}
+@keyframes barUp3 { 
+  0% {
+    transform: scale(1, .6);
+  }
+  100% {
+    transform: scale(1, .6);
+  }
+}
+@keyframes barUp4 { 
+  0% {
+    transform: scale(1, .8);
+  }
+  40% {
+    transform: scale(1, .8);
+  }
+  50% {
+    transform: scale(1, .4);
+  }
+  90% {
+    transform: scale(1, .4);
+  }
+  100% {
+    transform: scale(1, .8);
+  }
+}
+@keyframes barUp5 { 
+  0% {
+    transform: scale(1, 1);
+  }
+  40% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1, .2);
+  }
+  90% {
+    transform: scale(1, .2);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
 
 
 @media (max-width: 750px) {
