git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@68 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/Index/index.html
+++ b/1.0.0/web/Application/Home/View/Index/index.html
@@ -32,4 +32,13 @@
 
   });
 </script>
-
+<div class="loader-b">
+<div class="loader">
+  <div class="loader__bar"></div>
+  <div class="loader__bar"></div>
+  <div class="loader__bar"></div>
+  <div class="loader__bar"></div>
+  <div class="loader__bar"></div>
+  <div class="loader__ball"></div>
+</div>
+</div>
