--- a/1.0.0/web/Application/Home/View/layout.html
+++ b/1.0.0/web/Application/Home/View/layout.html
@@ -46,7 +46,7 @@
   
 </head>
 
-<body style="background-image:url({$uri}Public/Images/background.png)">
+<body style="background-image:url({$uri}Public/Images/login-bg2.png)">
   <script>
     PSI.Const.BASE_URL = "{$uri}";
 
