--- a/1.0.0/web/Application/Home/View/User/login.html
+++ b/1.0.0/web/Application/Home/View/User/login.html
@@ -138,7 +138,7 @@
 	height:100%;
     margin: 10% auto;
     background: #fff;
-    border-radius: 4px;
+    border-radius: 20px;
     padding: 50px 40px 40px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -165,7 +165,7 @@
     color: #37474f;
 	text-align:center;
 }
-.psi_secondary{background:#3975d5;color:#fff}
+.psi_secondary{background:#3975d5;color:#fff;border-radius:5px;font-weight:bold;}
 .psi_secondary:hover{background:#3975d5;opacity:0.9}
 .login-form {
     margin: 45px 0 30px;
