--- a/1.0.0/web/Public/Content/Site.css
+++ b/1.0.0/web/Public/Content/Site.css
@@ -615,8 +615,8 @@ input:focus{
 
 /* 说明或备注这类字段的样式 */
 .PSI-field-note {
-  color: #a8071a;
-  border-bottom: 2px solid #69c0ff;
+  color: #999;
+  border-bottom: 1px solid #eee;
 }
 
 .PSI-lookup-note {
@@ -818,8 +818,11 @@ background-color:#999 !important;
 .fb-bg.PSI-App-MainMenu .x-menu-item-text{color:#333 !important;}
 
 .x-menu-item-link{line-height:30px;}
-.x-menu-item-icon{top:2px;left:5px;color: #4576ce;
-    font-weight: bold;}
+.x-menu-item-icon{    top: 8px;
+    left: 5px;
+    color: #4576ce;
+    font-weight: bold;
+    background-size: 100% auto;}
 
 .x-grid-record-gray .x-grid-td{ background: #948d8e; }
 
@@ -861,9 +864,10 @@ background-color:#999 !important;
 }
 .x-window{padding:10px;}
 .x-window-header-text-container-default {text-align:center;border:none}
-.x-window-header-text-container-default span{color:#3975d5}
+.x-window-header-text-container-default span{color:#fff}
 .x-window-item h2{border-left:none !important;color:#666 !important;font-size:16px !important;font-weight:500 !important }
-.x-window-default,.x-window-header-default-top{border:none}
+.x-window-default,.x-window-header-default-top{border:none;}
+.x-window-header-default-top{background:#3975d5;color:#fff;}
 #PSI_AFX_MessageBox_ConfirmForm_buttonCancel{border:1px solid #999 !important;color:#999 !important}
 #PSI_AFX_MessageBox_ConfirmForm_buttonCancel-btnInnerEl{color:#999 !important}
 span.PSI-button-ok{background-image:none !important}
