git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@85 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/Sale/genWSBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/Sale/genWSBillPrintPage.html
@@ -47,9 +47,9 @@
       <td>
         <div align="center" style='font-size: 13'>序号</div>
       </td>
-      <td>
-        <div align="center" style='font-size: 13'>商品编码</div>
-      </td>
+      <!--<td>-->
+        <!--<div align="center" style='font-size: 13'>商品编码</div>-->
+      <!--</td>-->
       <td>
         <div align="center" style='font-size: 13'>商品名称</div>
       </td>
@@ -80,9 +80,9 @@
         <td>
           <div align="center" style='font-size: 13'>{$i+1}</div>
         </td>
-        <td>
-          <div style='font-size: 13'>{$v["goodsCode"]}</div>
-        </td>
+        <!--<td>-->
+          <!--<div style='font-size: 13'>{$v["goodsCode"]}</div>-->
+        <!--</td>-->
         <td>
           <div style='font-size: 13'>{$v["goodsName"]}</div>
         </td>
@@ -114,7 +114,7 @@
       <td>
         <div align="center">合计</div>
       </td>
-      <td></td>
+      <!--<td></td>-->
       <td></td>
       <td></td>
       <td></td>
