--- a/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
@@ -13,7 +13,7 @@
     <tr>
       <td width="12%"><span style='font-size: 13'>单号</span></td>
       <td width="15%"><span style='font-size: 13'>{$data["ref"]}</span></td>
-      <td width="12%"><span style='font-size: 13'>交货日期</span></td>
+      <td width="12%"><span style='font-size: 13'>业务日期</span></td>
       <td width="15%"><span style='font-size: 13'>{$data["dealDate"]}</span></td>
       <td width="12%"><span style='font-size: 13'>打印时间</span></td>
       <td><span style='font-size: 13'>{$data["printDT"]}</span></td>
@@ -47,9 +47,9 @@
       <td>
         <div align="center" style='font-size: 13'>序号</div>
       </td>
-      <td>
-        <div align="center" style='font-size: 13'>商品编码</div>
-      </td>
+      <!--<td>-->
+        <!--<div align="center" style='font-size: 13'>商品编码</div>-->
+      <!--</td>-->
       <td>
         <div align="center" style='font-size: 13'>商品名称</div>
       </td>
@@ -80,9 +80,9 @@
         <td>
           <div align="center" style='font-size: 13'>{$i+1}</div>
         </td>
-        <td>
-          <div style='font-size: 13'>{$v["goodsCode"]}</div>
-        </td>
+        <!--<td>-->
+          <!--<div style='font-size: 13'>{$v["goodsCode"]}</div>-->
+        <!--</td>-->
         <td>
           <div style='font-size: 13'>{$v["goodsName"]}</div>
         </td>
@@ -113,7 +113,7 @@
       <td>
         <div align="center">合计</div>
       </td>
-      <td></td>
+      <!--<td></td>-->
       <td></td>
       <td></td>
       <td></td>
