git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@86 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/Sale/genWSBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/Sale/genWSBillPrintPage.html
@@ -84,16 +84,16 @@
           <!--<div style='font-size: 13'>{$v["goodsCode"]}</div>-->
         <!--</td>-->
         <td>
-          <div style='font-size: 13'>{$v["goodsName"]}</div>
+          <div align="center" style='font-size: 13'>{$v["goodsName"]}</div>
         </td>
         <td>
-          <div style='font-size: 13'>{$v["goodsSpec"]}</div>
+          <div align="center" style='font-size: 13'>{$v["goodsSpec"]}</div>
         </td>
         <td>
           <div align="center" style='font-size: 13'>{$v["goodsCount"]}</div>
         </td>
         <td>
-          <div style='font-size: 13'>{$v["unitName"]}</div>
+          <div align="center" style='font-size: 13'>{$v["unitName"]}</div>
         </td>
         <td>
           <div align="right" style='font-size: 13'>{$v["goodsPrice"]}</div>
