git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@106 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
@@ -116,7 +116,7 @@
         <div align="left" >运费</div>
       </td>
       <td>
-        <div align="center" >1</div>
+        <div align="center" ></div>
       </td>
       <td>
         <div align="center" >{$data["freight"]}</div>
@@ -133,7 +133,7 @@
         <div align="center">合计</div>
       </td>
       <!--<td></td>-->
-      <td>大写金额</td>
+      <td>{$data['capGoodsMoney']}</td>
       <td align="center">总数</td>
       <td></td>
       
