git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@108 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
@@ -104,7 +104,7 @@
           <div align="center" >{$v["goodsMoney"]}</div>
         </td>
         <td>
-          <div align="center" >{$v["goodsMoney"]}</div>
+          <div align="center" >{$v["memo"]}</div>
         </td>
       </tr>
     </foreach>
@@ -133,7 +133,7 @@
         <div align="center">合计</div>
       </td>
       <!--<td></td>-->
-      <td>{$data['capGoodsMoney']}</td>
+      <td>{$data['capTotalMoney']}</td>
       <td align="center">{$data['goodsCount']}</td>
       <td></td>
       
