git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@109 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/Report/overview.html
+++ b/1.0.0/web/Application/Home/View/Report/overview.html
@@ -26,7 +26,8 @@
       productionName: "{$productionName}",
       pSaleBrief: "{$pSaleBrief}",
       pSaleCntBrief: "{$pSaleCntBrief}",
-      pSaleTop: "{$pSaleTop}"
+      pSaleTop: "{$pSaleTop}",
+      pProfit: "{$pProfit}"
     }));
   });
 </script>
