--- a/1.0.0/web/Application/Home/View/Report/purchaseDetail.html
+++ b/1.0.0/web/Application/Home/View/Report/purchaseDetail.html
@@ -22,6 +22,8 @@
       }
     });
 
-    app.add(PCL.create("PSI.Report.PurchaseDetailForm"));
+    app.add(PCL.create("PSI.Report.PurchaseDetailForm", {
+        viewPrice: "{$pViewPrice}",
+    }));
   });
 </script>
