git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@112 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/Funds/rvIndex.html
+++ b/1.0.0/web/Application/Home/View/Funds/rvIndex.html
@@ -22,6 +22,8 @@
       }
     });
 
-    app.add(PCL.create("PSI.Funds.RvMainForm"));
+    app.add(PCL.create("PSI.Funds.RvMainForm", {
+        pReceivingPay: "{$pReceivingPay}",
+    }));
   });
 </script>
