--- a/1.0.0/web/Application/Home/View/Funds/payIndex.html
+++ b/1.0.0/web/Application/Home/View/Funds/payIndex.html
@@ -10,6 +10,7 @@
 
 <script src="{$uri}Public/Scripts/PSI/Funds/PayMainForm.js?dt={$dtFlag}" type="text/javascript"></script>
 <script src="{$uri}Public/Scripts/PSI/Funds/PaymentEditForm.js?dt={$dtFlag}" type="text/javascript"></script>
+<script src="{$uri}Public/Scripts/PSI/Funds/PayEditForm.js?dt={$dtFlag}" type="text/javascript"></script>
 
 <!-- 查询条件 -->
 <script src="{$uri}Public/Scripts/PSI/Customer/CustomerField.js?dt={$dtFlag}" type="text/javascript"></script>
