git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@137 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/InvCheck/index.html
+++ b/1.0.0/web/Application/Home/View/InvCheck/index.html
@@ -34,7 +34,8 @@
       del: "{$pDelete}",
       commit: "{$pCommit}",
       genPDF: "{$pGenPDF}",
-      print: "{$pPrint}"
+      print: "{$pPrint}",
+      viewPrice: "{$pViewPrice}",
     };
 
     app.add(PCL.create("PSI.InvCheck.InvCheckMainForm", {
