--- a/1.0.0/web/Application/Home/View/PurchaseRej/genPRBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/PurchaseRej/genPRBillPrintPage.html
@@ -4,115 +4,110 @@
 * @license GPL v3
 */}
 <html>
-
+<style>
+  body{padding:0 30px;font-size: 16px;}
+  .product-table td{font-size: 14px;line-height: 20px;}
+  .info{margin-top: 10px;margin-left: 10px;}
+  .info-item{line-height: 26px;font-size: 14px;}
+  .info-item .l{display: inline-block;*display:inline-block;*zoom:1;vertical-align: middle;}
+  .info-item .r{display: inline-block;*display:inline-block;*zoom:1;vertical-align: middle;}
+  .info-item p{margin: 0;}
+  .info-item .l span{margin-right: 80px;}
+</style>
 <body>
-  <table border=0 cellSpacing=0 cellPadding=0 width="100%">
-    <tr>
-      <td colspan="6" align="center">采购退货出库单</td>
-    </tr>
-    <tr>
-      <td width="12%"><span style='font-size: 13'>单号</span></td>
-      <td width="15%"><span style='font-size: 13'>{$data["ref"]}</span></td>
-      <td width="12%"><span style='font-size: 13'>业务日期</span></td>
-      <td width="15%"><span style='font-size: 13'>{$data["bizDT"]}</span></td>
-      <td width="12%"><span style='font-size: 13'>打印时间</span></td>
-      <td><span style='font-size: 13'>{$data["printDT"]}</span></td>
-    </tr>
-    <tr>
-      <td><span style='font-size: 13'>供应商</span></td>
-      <td colspan="3"><span style='font-size: 13'>{$data["supplierName"]}</span></td>
-      <td><span style='font-size: 13'>出库仓库</span></td>
-      <td colspan="3"><span style='font-size: 13'>{$data["warehouseName"]}</span></td>
-    </tr>
-  </table>
-  <br />
-  <table border=1 cellSpacing=0 cellPadding=1 width="100%" style="border-collapse: collapse" bordercolor="#333333">
-    <tr>
-      <td>
-        <div align="center" style='font-size: 13'>序号</div>
-      </td>
-      <td>
-        <div align="center" style='font-size: 13'>物料编码</div>
-      </td>
-      <td>
-        <div align="center" style='font-size: 13'>品名</div>
-      </td>
-      <td>
-        <div align="center" style='font-size: 13'>规格型号</div>
-      </td>
-      <td>
-        <div align="center" style='font-size: 13'>数量</div>
-      </td>
-      <td>
-        <div align="center" style='font-size: 13'>单位</div>
-      </td>
-      <td>
-        <div align="center" style='font-size: 13'>退货单价</div>
-      </td>
-      <td>
-        <div align="center" style='font-size: 13'>退货金额</div>
-      </td>
-      <td>
-        <div align="center" style='font-size: 13'>税率</div>
-      </td>
-      <td>
-        <div align="center" style='font-size: 13'>价税合计</div>
-      </td>
-    </tr>
-    <foreach name="data['items']" item="v" key="i">
-      <tr>
-        <td>
-          <div align="center" style='font-size: 13'>{$i+1}</div>
-        </td>
-        <td>
-          <div style='font-size: 13'>{$v["goodsCode"]}</div>
-        </td>
-        <td>
-          <div style='font-size: 13'>{$v["goodsName"]}</div>
-        </td>
-        <td>
-          <div style='font-size: 13'>{$v["goodsSpec"]}</div>
-        </td>
-        <td>
-          <div align="center" style='font-size: 13'>{$v["goodsCount"]}</div>
-        </td>
-        <td>
-          <div style='font-size: 13'>{$v["unitName"]}</div>
-        </td>
-        <td>
-          <div align="right" style='font-size: 13'>{$v["goodsPrice"]}</div>
-        </td>
-        <td>
-          <div align="right" style='font-size: 13'>{$v["goodsMoney"]}</div>
-        </td>
-        <td>
-          <div align="right" style='font-size: 13'>{$v["taxRate"]}%</div>
-        </td>
-        <td>
-          <div align="right" style='font-size: 13'>{$v["moneyWithTax"]}</div>
-        </td>
-      </tr>
-    </foreach>
+<table border=0 cellSpacing=0 cellPadding=0 width="100%">
+  <tr>
+    <td colspan="6" align="center" style='font-size: 40px;line-height: 100px;'>假发供应仓库（龙头店）采购退货出库单</td>
+  </tr>
+  <tr>
+    <td width="15%" style="text-align: right;"><span style="margin-right: 10px">业务日期：</span></td>
+    <td width="35%"><span >{$data["bizDT"]}</span></td>
+    <td width="25%" style="text-align: right;"><span style="margin-right: 10px">单号：</span></td>
+    <td width="25%"><span >{$data["ref"]}</span></td>
+  </tr>
+  <tr>
+    <td width="15%" style="text-align: right;"><span style="margin-right: 10px">供应商：</span></td>
+    <td width="35%"><span >{$data["supplierName"]}</span></td>
+    <td width="25%" style="text-align: right;"><span style="margin-right: 10px">打印时间：</span></td>
+    <td width="25%"><span >{$data["printDT"]}</span></td>
+  </tr>
+</table>
+
+<table class="product-table" border=2 cellSpacing=0 cellPadding=1 width="100%" style="border-collapse: collapse;font-size:14px;margin-top: 5px;" bordercolor="#333333">
+  <tr>
+    <td>
+      <div align="center" >序号</div>
+    </td>
+    <td>
+      <div align="center" >商品名称</div>
+    </td>
+    <td>
+      <div align="center" >数量</div>
+    </td>
+    <td>
+      <div align="center" >单价</div>
+    </td>
+    <td>
+      <div align="center" >金额</div>
+    </td>
+    <td>
+      <div align="center" >备注</div>
+    </td>
+  </tr>
+  <foreach name="data['items']" item="v" key="i">
     <tr>
       <td>
-        <div align="center">合计</div>
-      </td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>
-        <div align="right">￥{$data["goodsMoney"]}</div>
+        <div align="center" >{$i+1}</div>
       </td>
       <td>
+        <div align="left" >{$v["goodsName"]} {$v["goodsSpec"]}</div>
       </td>
       <td>
-        <div align="right">￥{$data["moneyWithTax"]}</div>
+        <div align="center" >{$v["goodsCount"]}</div>
+      </td>
+      <td>
+        <div align="center" >{$v["goodsPrice"]}</div>
+      </td>
+      <td>
+        <div align="center" >{$v["goodsMoney"]}</div>
+      </td>
+      <td>
+        <div align="center" >{$v["memo"]}</div>
       </td>
     </tr>
-  </table>
+  </foreach>
+  <tr>
+    <td>
+      <div align="center">合计</div>
+    </td>
+    <td></td>
+    <td align="center">{$data['goodsCount']}</td>
+    <td></td>
+
+    <td>
+      <div align="center">{$data["goodsMoney"]}</div>
+    </td>
+    <td></td>
+  </tr>
+</table>
+<div class="info">
+  <div class="info-item">
+    <div class="l"><span>联系人：{$data["bizUserName"]}</span> <span>电话/微信：{$data["bizUserTel"]}</span></div>
+    <div class="r">客户签名：</div>
+  </div>
+  <div class="info-item">
+    <div class="l">联系地址：</div>
+    <div class="r">广州市越秀区广园西路222号龙头市场富一层M0011室</div>
+  </div>
+  <div class="info-item">
+    <div class="l">付款方式：</div>
+    <div class="r">
+      <p>中信银行（广州白云支行）/ 6217730906366420 户名：尚帅</p>
+      <p>民生银行（广州金沙洲支行）/ 6226190305296216 户名：尚帅</p>
+      <p>招商银行 / 6214862025419666 户名：尚帅</p>
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
