--- a/1.0.0/web/Application/Home/View/Bill/viewPWBill.html
+++ b/1.0.0/web/Application/Home/View/Bill/viewPWBill.html
@@ -10,7 +10,8 @@
 <script>
   PCL.onReady(() => {
     const form = PCL.create("PSI.Bill.PWViewForm", {
-      ref: "{$ref}"
+      ref: "{$ref}",
+      viewPrice:"{$pViewPrice}"
     });
     form.show();
   });
