git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@156 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Public/Content/Site.css
+++ b/1.0.0/web/Public/Content/Site.css
@@ -1085,4 +1085,7 @@ span.PSI-button-ok{background-image:none !important}
 	.home-nav ul li,.home-nav2 ul li{width:100%;margin:0 0 5px 0;}
 	
 }
+#buttonPDF-btnIconEl {
+    background-image: url(../Images/icons/excel01.png?v=2019040901) !important;top:0
+}
 
