git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@158 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/Sale/genWSBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/Sale/genWSBillPrintPage.html
@@ -81,7 +81,7 @@
       <div align="center" ></div>
     </td>
     <td>
-      <div align="left" >运费</div>
+      <div align="left" >{$data["expressName"]}</div>
     </td>
     <td>
       <div align="center" ></div>
