--- a/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
@@ -113,7 +113,7 @@
         <div align="center" ></div>
       </td>
       <td>
-        <div align="left" >运费</div>
+        <div align="left" >{$data["expressName"]}</div>
       </td>
       <td>
         <div align="center" ></div>
