git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@164 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/SaleOrder/genSOBillPrintPage.html
@@ -5,8 +5,8 @@
 */}
 <html>
 <style>
-  body{padding:0 30px;font-size: 16px;}
-  .product-table td{font-size: 14px;line-height: 20px;}
+  body{padding:0 30px;font-size: 16px;font-weight:bold}
+  .product-table td{font-size: 14px;line-height: 20px;border: 2px solid;}
   .info{margin-top: 10px;margin-left: 10px;}
   .info-item{line-height: 18px;font-size: 14px;}
   .info-item .l{display: inline-block;*display:inline-block;*zoom:1;vertical-align: middle;}
@@ -50,7 +50,7 @@
     </tr> -->
   </table>
  
-  <table class="product-table" border=2 cellSpacing=0 cellPadding=1 width="100%" style="border-collapse: collapse;font-size:14px;margin-top: 5px;" bordercolor="#333333">
+  <table class="product-table" border=4 cellSpacing=0 cellPadding=1 width="100%" style="border-collapse: collapse;font-size:14px;margin-top: 5px;" bordercolor="#333333">
     <tr>
       <td>
         <div align="center" >序号</div>
