--- a/1.0.0/web/Application/Home/View/SaleRej/genSRBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/SaleRej/genSRBillPrintPage.html
@@ -20,18 +20,18 @@
       <td colspan="6" align="center">假发供应仓库（龙头店）退货单</td>
     </tr>
     <tr>
-      <td width="12%"><span style='font-size: 13'>单号</span></td>
-      <td width="15%"><span style='font-size: 13'>{$data["ref"]}</span></td>
-      <td width="12%"><span style='font-size: 13'>业务日期</span></td>
-      <td width="15%"><span style='font-size: 13'>{$data["bizDT"]}</span></td>
-      <td width="12%"><span style='font-size: 13'>打印时间</span></td>
-      <td><span style='font-size: 13'>{$data["printDT"]}</span></td>
+      <td width="15%" style="text-align: right;"><span style="margin-right: 10px">业务日期：</span></td>
+      <td width="35%"><span >{$data["bizDT"]}</span></td>
+      <td width="25%" style="text-align: right;"><span style="margin-right: 10px">单号：</span></td>
+      <td width="25%"><span >{$data["ref"]}</span></td>
+
     </tr>
     <tr>
-      <td><span style='font-size: 13'>客户</span></td>
-      <td colspan="3"><span style='font-size: 13'>{$data["customerName"]}</span></td>
-      <td><span style='font-size: 13'>入库仓库</span></td>
-      <td colspan="3"><span style='font-size: 13'>{$data["warehouseName"]}</span></td>
+      <td width="15%" style="text-align: right;"><span style="margin-right: 10px">客户：</span></td>
+      <td width="35%"><span >{$data["customerName"]}</span></td>
+      <td width="25%" style="text-align: right;"><span style="margin-right: 10px">打印时间：</span></td>
+      <td width="25%"><span >{$data["printDT"]}</span></td>
+    
     </tr>
   </table>
   <br />
