--- a/1.0.0/web/Application/Home/View/SaleRej/genSRBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/SaleRej/genSRBillPrintPage.html
@@ -84,7 +84,7 @@
       <td>
         <div align="center">合计</div>
       </td>
-      <td></td>
+      <td>{$data['capTotalMoney']}</td>
       <td></td>
       <td></td>
       <td>
