git-svn-id: https://39.108.144.9:8443/svn/fdx_crm@169 3ac5beaa-6aae-4643-96fb-d167a1637ba8

--- a/1.0.0/web/Application/Home/View/SaleRej/genSRBillPrintPage.html
+++ b/1.0.0/web/Application/Home/View/SaleRej/genSRBillPrintPage.html
@@ -84,7 +84,7 @@
       <td>
         <div align="center">合计</div>
       </td>
-      <td>{$data['capTotalMoney']}</td>
+      <td>{$data['capRejMoney']}</td>
       <td></td>
       <td></td>
       <td>
